test: test a game start