@@ -1,8 +1,9 @@
-package me.syldium.decoudre.util;
+package me.syldium.thimble.util;
 
 import me.syldium.thimble.common.adapter.BlockBalancer;
 import me.syldium.thimble.common.player.InGamePlayer;
 import me.syldium.thimble.common.world.BlockData;
+import me.syldium.thimble.mock.util.BlockDataMock;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Test;
 
@@ -26,17 +27,17 @@ public class BlockBalancerTest {
         List<InGamePlayer> list = this.newPlayerList();
 
         Map<BlockData, Set<InGamePlayer>> excepted = new HashMap<>();
-        excepted.put(TestableBlockData.ONE, Set.of(list.get(0), list.get(5)));
-        excepted.put(TestableBlockData.THREE, Set.of(list.get(1), list.get(3), list.get(4)));
-        excepted.put(TestableBlockData.FOUR, Collections.singleton(list.get(2)));
-        excepted.put(TestableBlockData.FIVE, Collections.singleton(list.get(6)));
+        excepted.put(BlockDataMock.ONE, Set.of(list.get(0), list.get(5)));
+        excepted.put(BlockDataMock.THREE, Set.of(list.get(1), list.get(3), list.get(4)));
+        excepted.put(BlockDataMock.FOUR, Collections.singleton(list.get(2)));
+        excepted.put(BlockDataMock.FIVE, Collections.singleton(list.get(6)));
         assertEquals(excepted, new BlockBalancer(list).getInitialChoices());
     }
 
     @Test
     public void balance() {
         List<InGamePlayer> list = this.newPlayerList();
-        new BlockBalancer(list).balance(Arrays.asList(TestableBlockData.values()));
+        new BlockBalancer(list).balance(Arrays.asList(BlockDataMock.values()));
         Set<BlockData> set = new HashSet<>();
         for (InGamePlayer player : list) {
             if (!set.add(player.getChosenBlock())) {
@@ -48,7 +49,7 @@ public class BlockBalancerTest {
     @Test
     public void balanceOverflow() {
         List<InGamePlayer> list = this.newLongPlayerList();
-        new BlockBalancer(list).balance(Arrays.asList(TestableBlockData.values()));
+        new BlockBalancer(list).balance(Arrays.asList(BlockDataMock.values()));
         Map<BlockData, Integer> map = new HashMap<>();
         for (InGamePlayer player : list) {
             if (map.merge(player.getChosenBlock(), 1, Integer::sum) > 2) {
@@ -59,27 +60,27 @@ public class BlockBalancerTest {
 
     private @NotNull List<@NotNull InGamePlayer> newPlayerList() {
         List<InGamePlayer> list = new LinkedList<>();
-        list.add(this.newInGamePlayer(TestableBlockData.ONE));
-        list.add(this.newInGamePlayer(TestableBlockData.THREE));
-        list.add(this.newInGamePlayer(TestableBlockData.FOUR));
-        list.add(this.newInGamePlayer(TestableBlockData.THREE));
-        list.add(this.newInGamePlayer(TestableBlockData.THREE));
-        list.add(this.newInGamePlayer(TestableBlockData.ONE));
-        list.add(this.newInGamePlayer(TestableBlockData.FIVE));
+        list.add(this.newInGamePlayer(BlockDataMock.ONE));
+        list.add(this.newInGamePlayer(BlockDataMock.THREE));
+        list.add(this.newInGamePlayer(BlockDataMock.FOUR));
+        list.add(this.newInGamePlayer(BlockDataMock.THREE));
+        list.add(this.newInGamePlayer(BlockDataMock.THREE));
+        list.add(this.newInGamePlayer(BlockDataMock.ONE));
+        list.add(this.newInGamePlayer(BlockDataMock.FIVE));
         return list;
     }
 
     private @NotNull List<@NotNull InGamePlayer> newLongPlayerList() {
         List<InGamePlayer> list = this.newPlayerList();
-        list.add(this.newInGamePlayer(TestableBlockData.NINE));
-        list.add(this.newInGamePlayer(TestableBlockData.SEVEN));
-        list.add(this.newInGamePlayer(TestableBlockData.NINE));
-        list.add(this.newInGamePlayer(TestableBlockData.EIGHT));
-        list.add(this.newInGamePlayer(TestableBlockData.SIX));
+        list.add(this.newInGamePlayer(BlockDataMock.NINE));
+        list.add(this.newInGamePlayer(BlockDataMock.SEVEN));
+        list.add(this.newInGamePlayer(BlockDataMock.NINE));
+        list.add(this.newInGamePlayer(BlockDataMock.EIGHT));
+        list.add(this.newInGamePlayer(BlockDataMock.SIX));
         return list;
     }
 
-    private @NotNull InGamePlayer newInGamePlayer(@NotNull TestableBlockData blockData) {
+    private @NotNull InGamePlayer newInGamePlayer(@NotNull BlockDataMock blockData) {
         // noinspection ConstantConditions
         return new InGamePlayer(UUID.randomUUID(), "", blockData, null);
     }
